--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,31 +19,21 @@ jobs:
           distribution: temurin
           java-version: "17"
 
-      # GitHub runners already include Gradle; this action mainly adds caching + nicer defaults. :contentReference[oaicite:0]{index=0}
-      - name: Set up Gradle (cache)
-        uses: gradle/actions/setup-gradle@v3
+      # IMPORTANT: force Gradle 8.x (ForgeGradle 6 does NOT work on Gradle 9)
+      - name: Set up Gradle 8.8
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: "8.8"
 
-      - name: Detect project folder
-        id: proj
-        shell: bash
-        run: |
-          if [[ -f "build.gradle" || -f "build.gradle.kts" ]]; then
-            echo "dir=." >> "$GITHUB_OUTPUT"
-          elif [[ -f "MowzieOverhauledMusicCompat/build.gradle" || -f "MowzieOverhauledMusicCompat/build.gradle.kts" ]]; then
-            echo "dir=MowzieOverhauledMusicCompat" >> "$GITHUB_OUTPUT"
-          else
-            echo "ERROR: Could not find build.gradle" >&2
-            ls -la
-            exit 1
-          fi
+      - name: Print Gradle version (sanity check)
+        run: gradle --version
 
       - name: Build
-        working-directory: ${{ steps.proj.outputs.dir }}
         run: gradle clean build --no-daemon
 
       - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
           name: mowzie-overhauledmusic-compat-jar
-          path: ${{ steps.proj.outputs.dir }}/build/libs/*.jar
+          path: build/libs/*.jar
           if-no-files-found: error
